src/test/ui/feature-gates/feature-gate-fn_align.rs
#![crate_type = "lib"]

#[repr(align(16))] //~ ERROR `repr(align)` attributes on functions are unstable
fn requires_alignment() {}
